Article viewer: Reset scroll position when loading a new article

In theory this should not be necessary as the article is scrolled
to the top via JavaScript, but this does not appear to work in
some reported cases.

BUG:382587

Differential Revision: https://phabricator.kde.org/D11385